--- a/oefening-03/index.html
+++ b/oefening-03/index.html
@@ -4,12 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oefening 3</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"crossorigin="anonymous"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"crossorigin="anonymous"defer></script>
 </head>
 <body>
     <header></header>
 
     <main>
-        <table>
+        <table class="table">
+
+            <thead>
+                <tr>
+                    <th></th>
+                    <th scope="col">beginner<br>5,99&euro;</th>
+                    <th scope="col">pro 1<br>7,99&euro;</th>
+                    <th scope="col">pro 2<br>11,99&euro;</th>
+                    <th scope="col">Teseller<br>19,99&euro;</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th scope="row">webriumte</th>
+                    <td>4 GB</td>
+                    <td>6 GB</td>
+                    <td>8 GB</td>
+                    <td>12 GB</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">brandbreedte</th>
+                    <td>25 GB</td>
+                    <td>50 GB</td>
+                    <td>75 GB</td>
+                    <td>100 GB</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">websites</th>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>10</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">MySQL databases</th>
+                    <td>5</td>
+                    <td>10</td>
+                    <td>20</td>
+                    <td>50</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">domeinnaam</th>
+                    <td>1</td>
+                    <td>onbeperkt</td>
+                    <td>onbeperkt</td>
+                    <td>onbeperkt</td>
+                </tr>
+            </tbody>
             
         </table>
     </main>
